# langgraph-

./: .gitignore  07_parralelization.ipynb  08_router.ipynb  10_generator.ipynb  11_memory.ipynb  12Human.ipynb  1_BASICS.ipynb  4_prompts.ipynb  README.md  agents_formation.ipynb  documentation.md  message.ipynb  new_agent_formation.ipynb  orchestor.ipynb  pydantic_2.ipynb  pyproject.toml  reactagents.ipynb  tools_binding.ipynb
misinformation_simulation/: README.md  main.py  requirements.txt
misinformation_simulation/agents/: __init__.py  fact_checker_agent.py  influencer_agent.py  misinformation_agent.py  moderator_agent.py  neutral_agent.py
misinformation_simulation/graph/: __init__.py  social_network.py
misinformation_simulation/orchestration/: __init__.py  workflow.py
misinformation_simulation/ui/: gradio_app.py
