[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.4.0",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "gradio>=4.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=0.3.0",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=0.2.0",
    "langchain-openai>=1.1.9",
    "langgraph>=0.2.0",
    "matplotlib>=3.8.0",
    "networkx>=3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typedict>=0.1.0",
    "typing>=3.10.0.0",
    "wikipedia>=1.4.0",
]
